<resources>
    <string name="app_name">supletorioMoviles</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_crear_usuario">Crear nuevo usuario</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_lista_so">Lista de sistemas operativos</string>
    <string name="btn_crear_so">Crear sistema operativo</string>
    <string name="jugar">Jugar</string>
    <string name="version_api">Version Api</string>
    <string name="peso_gigas">Peso en gigas</string>
    <string name="instalado">Instalado</string>
    <string name="fecha_lanzamiento">Fecha de Lanzamiento</string>
    <string name="btn_lista_ap">Lista de Aplicaciones</string>
    <string name="btn_nueva_app">Crear nueva APP</string>
    <string name="costo">Costo</string>
    <string name="url_descarga">URL Descarga</string>
    <string name="btn_registrar_aplicacion">Registar Aplicaciones</string>
    <string name="btn_ver_aplicaciones">Ver Aplicaciones</string>
    <string name="btn_recolectar_batalla">Recolectar o Batalla</string>
    <string name="btn_info_batallas">Info Batallas</string>
    <string name="btn_perfil">Perfil</string>
    <string name="btn_regresar">Regresar</string>
    <string name="title_activity_batalla_maps">Map</string>
    <string name="resultado">Resultado</string>
    <string name="oro_recolectado">Oro Recolectado</string>
    <string name="experiencia_recolectado">Experiencia Recolectado</string>
    <string name="btn_ir_menu">Ir a Menu</string>
    <string name="btn_batalla">Batalla</string>
</resources>
