<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuJuegoActivity" tools:layout_editor_absoluteY="81dp">

    <Button
            android:text="@string/btn_registrar_aplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_registrar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="107dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btn_ver_aplicaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ver_app"
            app:layout_constraintStart_toStartOf="@+id/btn_registrar" android:layout_marginTop="53dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_registrar"/>
    <Button
            android:text="@string/btn_recolectar_batalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_batalla"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_ver_app" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btn_info_batallas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_info_batalla"
            app:layout_constraintStart_toStartOf="@+id/btn_batalla" android:layout_marginTop="56dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_batalla"/>
    <Button
            android:text="@string/btn_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_perfil"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@+id/btn_info_batalla" android:layout_marginTop="64dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_info_batalla"/>
</android.support.constraint.ConstraintLayout>