<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BatallaActivity">

    <TextView
            android:text="Oponente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="49dp" android:id="@+id/txt_nombre_batalla" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" android:fontFamily="serif" android:textSize="18sp"
            tools:ignore="MissingConstraints"/>
    <TextView
            android:text="@string/version_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_version_batalla" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_batalla" android:fontFamily="serif" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txt_nombre_batalla"/>
    <TextView
            android:text="@string/fecha_lanzamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_fecha_l_batalla" android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_version_batalla" android:fontFamily="serif" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txt_version_batalla"/>
    <TextView
            android:text="@string/url_descarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_url_batalla" android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fecha_l_batalla" android:fontFamily="serif" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txt_fecha_l_batalla"/>
    <TextView
            android:text="@string/costo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_costo_batalla" android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_url_batalla" android:fontFamily="serif" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txt_url_batalla"/>
    <TextView
            android:text="@string/peso_gigas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_peso_batalla" android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_costo_batalla" android:fontFamily="serif" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txt_costo_batalla"/>
    <Button
            android:text="@string/btn_batalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_peso_batalla" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintVertical_bias="0.114"/>
</android.support.constraint.ConstraintLayout>