<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecolectarActivity">

    <TextView
            android:text="@string/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:textSize="30sp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/oro_recolectado"
            android:layout_width="285dp"
            android:layout_height="72dp"
            android:id="@+id/txt_oro"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools:layout_editor_absoluteX="73dp" android:textSize="24sp" tools:ignore="MissingConstraints"/>
    <TextView
            android:text="@string/experiencia_recolectado"
            android:layout_width="285dp"
            android:layout_height="76dp"
            android:id="@+id/txt_experiencia" app:layout_constraintStart_toStartOf="@+id/txt_oro"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/txt_oro"
            android:textSize="24sp"/>
    <Button
            android:text="@string/btn_ir_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ir_menu" android:layout_marginTop="104dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_experiencia" app:layout_constraintEnd_toEndOf="@+id/txt_experiencia"
            app:layout_constraintStart_toStartOf="@+id/txt_experiencia" app:layout_constraintHorizontal_bias="0.502"/>
</android.support.constraint.ConstraintLayout>