<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearUsuarioActivity" tools:layout_editor_absoluteY="81dp">

    <EditText
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_u"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"/>
    <EditText
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_apellido_u"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <EditText
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fecha_naciemiento_u"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txt_email_u"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"/>
    <EditText
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_password_u"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.063"/>
    <TextView
            android:text="@string/apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_u"
            app:layout_constraintStart_toStartOf="@+id/txt_nombre_u"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_u"
            app:layout_constraintStart_toStartOf="@+id/txt_email_u"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/txt_fecha_naciemiento_u"
            app:layout_constraintStart_toStartOf="@+id/txt_fecha_naciemiento_u"/>
    <TextView
            android:text="@string/fecha_nacimiento"
            android:layout_width="143dp"
            android:layout_height="25dp"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/txt_apellido_u"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellido_u"/>
    <Button
            android:text="@string/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_u"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancelar"
            android:layout_marginEnd="92dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_u" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancelar"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_u" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="56dp"/>
</android.support.constraint.ConstraintLayout>