<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuPrincipalActivity">

    <Button
            android:text="@string/btn_crear_so"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_crear_so"
            app:layout_constraintEnd_toEndOf="@+id/btn_lista_so"
            app:layout_constraintStart_toStartOf="@+id/btn_lista_so" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_lista_so"/>
    <Button
            android:text="@string/btn_lista_so"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_lista_so"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/jugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_jugar" app:layout_constraintEnd_toEndOf="@+id/btn_lista_so"
            app:layout_constraintStart_toStartOf="@+id/btn_lista_so" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_lista_so"/>
</android.support.constraint.ConstraintLayout>