<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditarSOActivity" tools:layout_editor_absoluteY="81dp">

    <TextView
            android:text="@string/peso_gigas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/txt_fecha_lanzamiento_so" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fecha_lanzamiento_so"/>
    <TextView
            android:text="@string/instalado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="@+id/txt_peso_gigas_so"
            android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/txt_peso_gigas_so"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_nombre_so" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/version_api"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/textView9"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="@+id/txt_nombre_so"
            app:layout_constraintStart_toStartOf="@+id/txt_nombre_so" android:layout_marginTop="57dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_version_api_so" android:layout_marginBottom="57dp"/>
    <TextView
            android:text="@string/fecha_lanzamiento"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/txt_version_api_so"
            app:layout_constraintStart_toStartOf="@+id/txt_version_api_so" android:layout_marginTop="63dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_fecha_lanzamiento_so" android:layout_marginBottom="63dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_so"
            tools:ignore="MissingConstraints" android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_version_api_so"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_so" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fecha_lanzamiento_so"
            tools:ignore="MissingConstraints" android:layout_marginTop="55dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_version_api_so" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_peso_gigas_so"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>
    <Spinner android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/instalado_sso" tools:ignore="MissingConstraints"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="31dp" android:layout_marginEnd="31dp"
    ></Spinner>

    <Button
            android:text="@string/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_so"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="@+id/instalado_sso"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="102dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="70dp" android:layout_marginBottom="104dp"/>
    <Button
            android:text="@string/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancelar_so"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="@+id/btn_guardar_so"
            app:layout_constraintBottom_toBottomOf="@+id/btn_guardar_so" android:layout_marginEnd="54dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>