<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearSOActivity" tools:layout_editor_absoluteY="81dp">

    <TextView
            android:text="@string/peso_gigas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/txt_peso_gigas_ap"
            app:layout_constraintTop_toBottomOf="@+id/txt_fecha_lanzamiento_ap" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_peso_gigas_ap"/>
    <TextView
            android:text="@string/instalado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/instalado_so"
            app:layout_constraintTop_toBottomOf="@+id/txt_peso_gigas_ap" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/instalado_so"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="52dp" android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_nombre_ap"/>
    <TextView
            android:text="@string/version_api"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/txt_nombre_ap"
            android:layout_marginBottom="9dp" app:layout_constraintBottom_toTopOf="@+id/txt_version_ap"/>
    <TextView
            android:text="@string/fecha_lanzamiento"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/txt_version_ap"
            app:layout_constraintTop_toBottomOf="@+id/txt_version_ap" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_fecha_lanzamiento_ap"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_ap"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginBottom="9dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_version_ap"
            app:layout_constraintBottom_toTopOf="@+id/textView9" app:layout_constraintStart_toStartOf="@+id/textView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_version_ap"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginBottom="9dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_fecha_lanzamiento_ap"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView9"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fecha_lanzamiento_ap"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginBottom="9dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_peso_gigas_ap"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_peso_gigas_ap"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginBottom="9dp"
            app:layout_constraintEnd_toEndOf="@+id/instalado_so" app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"/>
    <Spinner android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/instalado_so" tools:ignore="MissingConstraints"
             app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginBottom="59dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/btn_guardar_so"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
    ></Spinner>

    <Button
            android:text="@string/btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_so"
            app:layout_constraintTop_toBottomOf="@+id/instalado_so"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancelar_so" android:layout_marginBottom="62dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="12dp"/>
    <Button
            android:text="@string/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancelar_so"
            app:layout_constraintStart_toEndOf="@+id/btn_guardar_so" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_guardar_so"
            app:layout_constraintBottom_toBottomOf="@+id/btn_guardar_so" android:layout_marginEnd="11dp"
    />

</android.support.constraint.ConstraintLayout>