<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/btn_crear_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_crear_usuario" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_password"
            app:layout_constraintVertical_bias="0.913"/>
    <Button
            android:text="@string/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login" app:layout_constraintStart_toEndOf="@+id/btn_crear_usuario"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_password"
            app:layout_constraintVertical_bias="0.913"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="30sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintVertical_bias="0.228"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="30sp" app:layout_constraintStart_toStartOf="@+id/txt_email"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_email"/>
    <EditText
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txt_email" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"/>
    <EditText
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_password" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"/>

</android.support.constraint.ConstraintLayout>